infrastructure/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ApniDukaan
  labels:
    name: ApniDukaan
    environment: production
